# src/routers/auth.router.ts
@@ -1,7 +1,6 @@
 import Router from "express";
 
 import { authController } from "../controllers";
-import { EActionTokenType } from "../enums";
 import {
   authMiddleware,
   commonMiddleware,
@@ -13,7 +12,7 @@ const router = Router();
 
 router.post(
   "/register",
-  commonMiddleware.isBodyValid(UserValidator.createUser),
+  commonMiddleware.isBodyValid(UserValidator.registerUser),
   userMiddleware.getDynamicallyAndThrow("email"),
   authController.register
 );
@@ -31,37 +30,4 @@ router.post(
   authController.refresh
 );
 
-router.post(
-  "/password/change",
-  commonMiddleware.isBodyValid(UserValidator.changeUserPassword),
-  authMiddleware.checkAccessToken,
-  authController.changePassword
-);
-
-router.post(
-  "/password/forgot",
-  commonMiddleware.isBodyValid(UserValidator.emailValidator),
-  userMiddleware.getDynamicallyOrThrow("email"),
-  authController.forgotPassword
-);
-
-router.put(
-  `/password/forgot/:token`,
-  authMiddleware.checkActionToken(EActionTokenType.forgot),
-  authMiddleware.checkOldPassword,
-  authController.setForgotPassword
-);
-
-router.post(
-  "/activate",
-  commonMiddleware.isBodyValid(UserValidator.emailValidator),
-  userMiddleware.getDynamicallyOrThrow("email"),
-  authController.sendActivateToken
-);
-
-router.put(
-  `/activate/:token`,
-  authMiddleware.checkActionToken(EActionTokenType.activate),
-  authController.activate
-);
 export const authRouter = router;
