# src/routers/user.router.ts
@@ -4,7 +4,6 @@ import { userController } from "../controllers";
 import {
   authMiddleware,
   commonMiddleware,
-  fileMiddleware,
   userMiddleware,
 } from "../middlewares";
 import { UserValidator } from "../validators";
@@ -12,8 +11,6 @@ import { UserValidator } from "../validators";
 const router = Router();
 
 router.get("/", userController.getAll);
-
-router.post("/", userMiddleware.isUserValidForCreate, userController.create);
 
 router.get(
   "/:userId",
@@ -38,23 +35,6 @@ router.delete(
   commonMiddleware.isIdValid("userId"),
   userMiddleware.getByIdOrThrow,
   userController.delete
-);
-
-router.put(
-  "/:userId/avatar",
-  authMiddleware.checkAccessToken,
-  commonMiddleware.isIdValid("userId"),
-  fileMiddleware.isAvatarValid,
-  userMiddleware.getByIdOrThrow,
-  userController.uploadAvatar
-);
-
-router.delete(
-  "/:userId/avatar",
-  authMiddleware.checkAccessToken,
-  commonMiddleware.isIdValid("userId"),
-  userMiddleware.getByIdOrThrow,
-  userController.deleteAvatar
 );
 
 export const userRouter = router;
