# src/utils/swagger.json
@@ -2,110 +2,126 @@
   "swagger": "2.0",
   "info": {
     "version": "1.0",
-    "title": "nodeSept2022",
-    "description": "NODEJS MODULE FOR SEPT-2022",
-    "contact": {
-      "email": "artemkhilchenko06@gmail.com"
-    }
+    "title": "Final project"
   },
   "paths": {
-    "/cars/{carId}": {
+    "/users/{userId}": {
       "get": {
+        "description": "Get user by ID",
         "tags": [
-          "Cars"
+          "User"
         ],
-        "summary": "get car by id",
-        "operationId": "getCarById",
-        "produces": [
-          "application/json"
-        ],
+        "operationId": "getUserById",
         "parameters": [
           {
-            "in": "header",
+            "name": "userId",
+            "in": "path",
+            "type": "string",
+            "required": true
+          },
+          {
             "name": "Authorization",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "default": "fdkslfjdsklfjsdkjfdsljfds"
-            }
+            "in": "header",
+            "type": "string",
+            "required": true
           }
         ],
         "responses": {
           "200": {
-            "description": "successful operation",
+            "description": "Successful response",
             "schema": {
-              "$ref": "#/definitions/Car"
+              "$ref": "#/definitions/SingleUser"
             }
           },
           "400": {
-            "description": "no token provided"
+            "description": "Bad request",
+            "schema": {
+              "$ref": "#/definitions/ApiError"
+            }
           }
         }
       },
       "put": {
+        "description": "Update user",
         "tags": [
-          "Cars"
+          "User"
+        ],
+        "operationId": "updateUserById",
+        "parameters": [
+          {
+            "name": "role",
+            "required": false,
+            "type": "string",
+            "in": "formData"
+          }
         ],
         "responses": {
-          "200": {}
+          "200": {
+            "description": "User has been updated",
+            "schema": {
+              "$ref": "#/definitions/SingleUser"
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "schema": {
+              "$ref": "#/definitions/ApiError"
+            }
+          }
         }
-      },
-      "delete": {
+      }
+    },
+    "/users": {
+      "get": {
+        "description": "Get all users",
         "tags": [
-          "Cars"
+          "User"
         ],
+        "operationId": "getAllUsers",
         "responses": {
-          "200": {}
+          "200": {
+            "description": "Successful response",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/SingleUser"
+              }
+            }
+          }
         }
       }
     }
   },
   "definitions": {
-    "Car": {
-      "type": "object",
+    "ApiError": {
       "properties": {
-        "id": {
-          "type": "string"
-        },
-        "brand": {
-          "type": "string",
-          "example": "BMW"
-        },
-        "model": {
-          "type": "string",
-          "example": "M5"
-        },
-        "year": {
+        "statusCode": {
           "type": "number",
-          "example": "2015"
+          "example": 400
         },
-        "user": {
-          "type": "object",
-          "$ref": "#definitions/User"
+        "message": {
+          "type": "string",
+          "example": "Bad request"
         }
       }
     },
-    "User": {
-      "type": "object",
+    "SingleUser": {
       "properties": {
-        "id": {
-          "type": "string"
-        },
-        "brand": {
+        "name": {
           "type": "string",
-          "example": "BMW"
+          "example": "Artem"
         },
-        "model": {
+        "email": {
           "type": "string",
-          "example": "M5"
+          "example": "art324@gmail.com"
         },
-        "year": {
-          "type": "number",
-          "example": "2015"
+        "password": {
+          "type": "string",
+          "example": "Welvo456"
         },
-        "user": {
-          "type": "object",
-          "$ref": "#definitions/User"
+        "role": {
+          "type": "string",
+          "example": "admin"
         }
       }
     }
